hphp/hack/test/ifc/check/foreach_class_value.php.exp
=== IFC analysis results for foreach_class_value.php
File "foreach_class_value.php", line 23, characters 5-21:
Data with policy `B` appears in context `D`. (Typing[4379])
  File "foreach_class_value.php", line 8, characters 35-44:
  This may be the data source with policy `B`
  File "foreach_class_value.php", line 9, characters 33-41:
  This may be the data sink with policy `D`
  File "foreach_class_value.php", line 14, characters 11-12:
  Another program point contributing to the illegal flow
  File "foreach_class_value.php", line 18, characters 5-15:
  Another program point contributing to the illegal flow
  File "foreach_class_value.php", line 21, characters 11-12:
  Another program point contributing to the illegal flow
